add keyboard press

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <body>
     <header class="globalHeader">
       <form class="searchForm" action="https://www.baidu.com/s" method="get">
-        <input type="text" name="wd" />
+        <input type="text" name="wd" id="input1" />
         <button type="submit">搜索</button>
       </form>
     </header>
